remocao de 2 links e adicao 1 e modificacao no style.css

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#contato">Contato</a>
     </nav>
 
     <main>
@@ -165,7 +164,7 @@
 
     <footer>
         <p>Site criado por <a href="https://github.com/gustavoguanabara">Gustavo Guanabara</a> e recriado por <a
-                href="https://github.com/Henrique22j">J.Henrique</a> para o <a
+                href="https://github.com/Henrique22j" id="contato">J.Henrique</a> para o <a
                 href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">CursoEmVideo</a></p>
     </footer>
 </body>
